# libsdl

./: .gitignore  CMakeLists.txt  README.md
src/libgui/: CMakeLists.txt
src/libtest/: CMakeLists.txt
ubuntu18/SDL2/include/SDL2/: SDL_config.h
ubuntu18/SDL2/lib/cmake/SDL2/: SDL2Targets-noconfig.cmake  SDL2Targets.cmake
ubuntu18/SDL2/lib/pkgconfig/: sdl2.pc
